--- a/grapple/templates/grapple/graphiql.html
+++ b/grapple/templates/grapple/graphiql.html
@@ -5,22 +5,23 @@
   <title>GraphiQL</title>
   <meta name="robots" content="noindex" />
   <style>
-    html, body {
+    html, body, #graphiql {
       height: 100%;
       margin: 0;
       overflow: hidden;
       width: 100%;
     }
   </style>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.13.0/graphiql.css" rel="stylesheet" />
-  <script src="//cdn.jsdelivr.net/fetch/0.9.0/fetch.min.js"></script>
-  <script src="//cdn.jsdelivr.net/react/15.0.0/react.min.js"></script>
-  <script src="//cdn.jsdelivr.net/react/15.0.0/react-dom.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.13.0/graphiql.js"></script>
-  <script src="//unpkg.com/subscriptions-transport-ws@{{SUBSCRIPTIONS_TRANSPORT_VERSION}}/browser/client.js"></script>
-  <script src="//unpkg.com/graphiql-subscriptions-fetcher@0.0.2/browser/client.js"></script>
+  <link href="https://unpkg.com/graphiql@{{GRAPHIQL_VERSION}}/graphiql.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://unpkg.com/whatwg-fetch@3.0.0/dist/fetch.umd.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/react@{{REACT_VERSION}}/umd/react.production.min.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/react-dom@{{REACT_VERSION}}/umd/react-dom.production.min.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/graphiql@{{GRAPHIQL_VERSION}}/graphiql.min.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/subscriptions-transport-ws@{{SUBSCRIPTIONS_TRANSPORT_VERSION}}/browser/client.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/graphiql-subscriptions-fetcher@0.0.2/browser/client.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div id="graphiql"></div>
   <script>
     // Collect the URL parameters
     var parameters = {};
@@ -106,7 +107,7 @@
         onEditVariables: onEditVariables,
         onEditOperationName: onEditOperationName,
       }),
-      document.body
+      document.getElementById('graphiql')
     );
   </script>
 </body>
